--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.9",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "^2.1.0",
     "@react-navigation/drawer": "^5.12.9",
     "@react-navigation/native": "^5.9.8",
     "@react-navigation/stack": "^5.14.9",
+    "date-fns": "^2.25.0",
     "expo": "~43.0.0",
     "expo-status-bar": "~1.1.0",
     "firebase": "^8.8.1",
@@ -24,6 +26,7 @@
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.8.0",
     "react-native-status-bar-height": "^2.6.0",
+    "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1",
     "styled-components": "^5.3.3"
   },
